vuehtml编辑器以及color组件button组件form组件完善

--- a/src/assets/common/common.less
+++ b/src/assets/common/common.less
@@ -4,7 +4,10 @@
 @button-blue-hover:#5281b5;
 @button-orange:#f15b1b;
 @button-orange-hover:#e78155;
-
+@button-cheng:#e6a23c;
+@button-cheng-hover:#e2b26a;
+@button-green:#67c23a;
+@button-green-hover:#84c465;
 
 @font-blue:#409eff;
 @font-red:#ea362c;
@@ -12,4 +15,5 @@
 @font-gray-three:#333333;
 @font-white:#ffffff;
 @font-black:#000000;
-
+@font-cheng:#e6a23c;
+@font-green:#67c23a;
