--- a/src/assets/common/common.less
+++ b/src/assets/common/common.less
@@ -1,3 +1,4 @@
+/******按钮颜色************/
 @button-red:#ea362c;
 @button-red-hover:#e3564e;
 @button-blue:#2464b1;
@@ -9,11 +10,64 @@
 @button-green:#67c23a;
 @button-green-hover:#84c465;
 
+/******文字颜色************/
 @font-blue:#409eff;
 @font-red:#ea362c;
 @font-gray-night:#999999;
+@font-gray-six:#666666;
 @font-gray-three:#333333;
 @font-white:#ffffff;
 @font-black:#000000;
 @font-cheng:#e6a23c;
 @font-green:#67c23a;
+
+
+/*******字体大小************/
+@size12:12px;
+@size14:14px;
+@size16:16px;
+@size18:18px;
+@size20:20px;
+@size22:22px;
+@size24:24px;
+@size26:26px;
+@size28:28px;
+@size30:30px;
+
+
+/*******常用flex布局*****/
+.display_centerX {
+    display: flex;
+    justify-content: center;
+}
+.display_centerY{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+}
+.display_spaceBetween {
+    display: flex;
+    justify-content: space-between;
+}
+.display_spaceAround {
+    display: flex;
+    justify-content: space-around;
+}
+.display_alignItems {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/***项目基本配置****/
+html,body{
+    font-size: 12px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+ul,li{
+    list-style: none;
+}
